--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   },
   "devDependencies": {
     "@types/node": "20.4.8",
-    "@types/react": "18.2.18"
+    "@types/react": "18.2.18",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.5.2"
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
