--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
+    "encoding": "^0.1.13",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.2"
   },
