--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
@@ -22,6 +21,7 @@
   "devDependencies": {
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
+    "autoprefixer": "^10.4.15",
     "encoding": "^0.1.13",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.2"
